--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					</div>
 				</div>
 				<div class="promo__img-wrap">
-					<img class="promo__img" src="/assets/img/bg-img.png" alt="два студента">
+					<img class="promo__img" src="assets/img/bg-img.png" alt="два студента">
 				</div>
 			</div>
 		</div>
