--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="wrapper">
 			<div class="header">
 				<a class="header__logo logo" href="#">
-					<img class="logo__img" src="/assets/img/logo.png" alt="конфедератка" width="57" height="55">
+					<img class="logo__img" src="assets/img/logo.png" alt="конфедератка" width="57" height="55">
 					<p class="logo__title">Логотип</p>
 				</a>
 				<nav class="nav">
